<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/feedback_icon1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_star_border_black_24dp" />

    <ImageView
        android:id="@+id/feedback_icon2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_star_border_black_24dp" />

    <ImageView
        android:id="@+id/feedback_icon3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_star_border_black_24dp" />

    <ImageView
        android:id="@+id/feedback_icon4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_star_border_black_24dp" />

    <ImageView
        android:id="@+id/feedback_icon5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_star_border_black_24dp" />

</LinearLayout>