<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RecipeFragment">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:layout_gravity="center"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

</FrameLayout>